# example-messaging-adapter-wormhole-guardians

./: .gitmodules  README.md  package-lock.json  package.json
.github/workflows/: svm.yml
evm/: .gitignore  README.md
evm/script/: DeployWormholeGuardiansAdapterWithExecutor.s.sol  DeployWormholeTransceiver.s.sol  ReceiveMsg.s.sol  SetPeer.s.sol
evm/sdk/ts/src/contracts/: admin.ts  contractState.ts  message.ts  peers.ts
evm/sdk/ts/src/example/: freeShow.ts
evm/sh/: deployWormholeGuardiansAdapter.sh  deployWormholeGuardiansAdapterWithExecutor.sh  deployWormholeTransceiver.sh  flatten.sh  receiveMsg.sh  setPeer.sh
evm/src/: WormholeGuardiansAdapter.sol  WormholeGuardiansAdapterWithExecutor.sol  WormholeTransceiver.sol
evm/src/interfaces/: IWormholeGuardiansAdapter.sol  IWormholeTransceiver.sol
evm/src/libraries/: TransceiverHelpers.sol
evm/test/: WormholeGuardiansAdapter.t.sol  WormholeGuardiansAdapterWithExecutor.t.sol  WormholeTransceiver.t.sol
evm/test/mocks/: MockEndpoint.sol  MockExecutor.sol  MockWormhole.sol
svm/: Anchor.toml  Cargo.toml  Makefile  package-lock.json  package.json
svm/idls/: endpoint.json  endpoint.ts  wormhole_verify_vaa_shim.json
svm/modules/universal-address/: Cargo.toml
svm/programs/wormhole-guardian-adapter/: Cargo.toml  README.md
svm/programs/wormhole-guardian-adapter/src/: error.rs  event.rs  lib.rs
svm/programs/wormhole-guardian-adapter/src/instructions/: admin.rs  mod.rs  pick_up_message.rs  recv_message.rs
svm/programs/wormhole-guardian-adapter/src/state/: config.rs  message.rs  mod.rs  peer.rs
svm/programs/wormhole-guardian-adapter/src/wormhole/: accounts.rs  message.rs  mod.rs  post_message.rs
svm/tests/: svm.ts  wormhole-guardian-adapter.ts
svm/tests/accounts/mainnet/: core_bridge_config.json
svm/tests/idl/: endpoint.json  mock_integrator.json  wormhole_post_message_shim.json
svm/tests/idls/: mock_integrator.json
svm/tests/types/: endpoint.ts  mock_integrator.ts  wormhole_post_message_shim.ts  wormhole_verify_vaa_shim.ts
