[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5", features = [
    "init-if-needed", "event-cpi"
] }
cfg-if = "1.0"
wormhole-solana-utils = "0.3.0-alpha.1"
wormhole-io = "0.1"
wormhole-anchor-sdk = { version = "0.30.1-alpha.1" }

[workspace.dependencies.universal-address]
# this should be a crate
path = "./lib/example-messaging-endpoint/svm/modules/universal-address"
