[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
cfg-if = "1.0"
universal-address = "0.1.0"
wormhole-io = "0.1"
wormhole-anchor-sdk = "0.30.1-alpha.3"
wormhole-solana-utils = "0.3.0-alpha.1"
