[package]
name = "wormhole-guardian-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_guardian_adapter"

[features]
default = ["solana"]
solana = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
universal-address = { workspace = true }
cfg-if = { workspace = true }
