[package]
name = "wormhole-guardian-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wormhole_guardian_adapter"

[features]
default = ["solana", "mainnet"]
solana = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "wormhole-anchor-sdk/idl-build"]
mainnet = [ "wormhole-anchor-sdk/mainnet" ]
solana-devnet = [ "wormhole-anchor-sdk/solana-devnet" ]
tilt-devnet = [ "wormhole-anchor-sdk/tilt-devnet" ]
tilt-devnet2 = [ "tilt-devnet" ]

[dependencies]
anchor-lang = { workspace = true }
cfg-if = { workspace = true }
universal-address = { workspace = true }
wormhole-io = { workspace = true }
wormhole-solana-utils = { workspace = true }
wormhole-anchor-sdk = { workspace = true }
